--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
+    "@types/redux-thunk": "^2.1.0",
     "@types/uuid": "^8.3.1",
     "axios": "^0.21.4",
     "react": "^17.0.2",
