--- a/my-app/package.json
+++ b/my-app/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-form": "^8.3.7",
+    "reselect": "^4.1.5",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
