--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-form": "^8.3.7",
     "reselect": "^4.1.5",
     "typescript": "^4.1.2",
