--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -15,6 +20,7 @@
     "@types/redux-thunk": "^2.1.0",
     "@types/uuid": "^8.3.1",
     "axios": "^0.21.4",
+    "babel-plugin-macros": "^3.1.0",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -25,6 +31,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-form": "^8.3.7",
     "reselect": "^4.1.5",
+    "sass": "^1.49.0",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
